--- a/CS434.API/CS434.API.csproj
+++ b/CS434.API/CS434.API.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="MODELS\Response\Class.cs" />
+    <Compile Remove="MODELS\Response\Class1.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
